# systemd-control-panel

./: CMakeLists.txt  README.md
include/: ControlPanelWindow.h  SelectItemWindow.h  ServiceData.h  ServiceRow.h  constant.h  utils.h
src/: ControlPanelWindow.cpp  SelectItemWindow.cpp  ServiceData.cpp  ServiceRow.cpp  main.cpp  utils.cpp
